assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700|Amita:100,200,300,400,500,600,700');
@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Amita:wght@700&display=swap');

body{
    margin:0px;
    width:100%;
}

.container-fluid{
    margin:0;
    padding:0px;
}
/*--------------------Header----------------*/
header{
    margin-right:-15px;
}
.header{
    margin-right:-15px;
}


.navbar{
    padding-bottom:10px;
    padding-top:10px;
    margin-bottom:20px;
    background-color:#777a7def;
    width:100%;
}

.main-heading{
    font-family:'Alfa Slab One';
    font-size:40px;
    text-transform: uppercase;
    padding-top:5px;
    color:#fafafa;
    display:block;
    text-align: center;
    text-shadow: 10px 10px 16px #ef7108bf;
}

.cogs i{
    font-size:40px;
    display:block;
    color:#fafafa;
    text-shadow: 10px 10px 16px #ef7108bf;
}

@media(max-width:800px){
    .cogs{
        display:none;
    }
}

.menuitem{
    padding:10px;
    

    
}
.list-inline-item:not(:last-child) {
    margin-right:0;
}

.list-inline{
    padding:0px;
}

.services{
    padding-right:5px;
}
.menuitem a{
    color:#fafafa;
    text-align: center;

}
.menuitem span{
    display:block;
    width:100%;
    padding-top:5px;
    text-align:center;
    text-transform:uppercase;
    font-size: 14px;
    font-weight: 600;
    letter-spacing: 2px;

}

.menu-item span:hover{
    color:#360ab1;
    font-weight:700;
}

#nav li{
    padding:10px;
    margin:0;
}

#nav{
    padding-left:10px;
}
/*--------------------Main Image----------------*/



.logo-container{
    padding:0px;

}
    
    



   #logo {
    padding: 0px;
    height: 400px;
    width: 100%;
    display:block;
    background:url("/assets/images/Featured-item.jpg");


    z-index:1;   

}




.bubble{
    background-color:rgba(241, 121, 9, 0.603);
    width:300px;
    height:180px;
    border-radius:50%;
    position:absolute;
    right:20%;
    bottom:10%;
    z-index: 2;
    
}

@media (max-width:400px){
    .bubble{
        
        width:55%;
        height:50%;
    }
}

.bubble p{
    font-family:'Amita', cursive;
    font-size:28px;
    color:#fafafa;
    padding-top:20px;
    text-align:center;
    vertical-align:middle;
}

/*--------------------Section----------------*/
.testimonials{
    font-family:"Roboto", sans-serif;
    border: 2px solid #525252;
    padding-top:20px;
    margin-top:20px;
    text-align:center;
    margin-bottom:20px;
    margin-left:20px;
    margin-right:20px;
    padding-left:20px;
    padding-right:20px;
}



.uppercase{
    text-transform:uppercase;
}
.about-us{
 
    text-align: center;
    padding:10px;
}

.about-us-heading{
    text-align: center;
}
.testimonials-heading{
    text-align:center;
    display:block;
} 



.services{
        padding-top:30px;
    }

/*--------------------Services----------------*/
section{
    padding-top:30px;
    padding-bottom:30px;
    padding-left:10px;

}


#services-box{

    text-align:center;
    padding:0px;
    box-shadow: 10px 10px 5px grey;
    margin-bottom:20px;
    margin-left:30px;
    margin-right:30px;
    margin-top:20px;
    background-color:#777a7d;
    
}

.services-heading{

    width:100%;
    padding:0px;
    margin:0;
    text-transform:uppercase;
    color:#fafafa;
    text-align: center;
    text-shadow: 10px 10px 16px #ef7108bf;

    
    }

.services-info{
    width:80%;
    text-align:center;
    margin-top:10px;
    margin-bottom:10px;
    display:inline-block;
    padding-left:5px;
    padding-right:5px;
    background-color:#777a7dd7;
    color:#fafafa;
    
}
    
    /*--------------------Form----------------*/

.contact-heading {
    font-family:"Exo", sans-serif;
    font-weight: 300;
    margin-top:25px;
    margin-bottom:20px;
}
.center-form{
    padding-top:10px;
    margin:0 auto;
    max-width:70%;

}

@media(min-width:992px){
    .center-form{
    padding-top:30px;
    min-height:240px;
    margin:0 auto;
    max-width:50%;

}
}





/*--------------------Footer----------------*/

footer{
    background-color: #525252;
    color:#fafafa;
    min-height:120px;
    
    width:100%;
    text-align:center;
}

.footer{
    margin-right:-20px;
}

#footer-details{
    padding-top:30px;
}

.social-links i{
    color:#ef7108bf;
    font-size:20px;
    padding:10px;
}

.contact-us i{
   color:#ef7108bf; 
}

